--- a/scss/style.css
+++ b/scss/style.css
@@ -2,4 +2,44 @@
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
+}
+
+header .header-navbar {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  border-bottom: 1px dotted black;
+  padding: 30px;
+}
+header .header-navbar .navbar-logo .nav-logo {
+  margin-left: 50px;
+}
+header .header-navbar .navbar-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+header .header-navbar .navbar-container a {
+  text-decoration: none;
+  color: white;
+  font-size: 30px;
+  border: 2px solid gray;
+  background-color: gray;
+  border-radius: 8px;
+  padding: 5px 10px;
+}
+header .header-navbar .navbar-container .home {
+  border: 2px solid black;
+  border-radius: 8px;
+  color: black;
+  font-size: 30px;
+  background-color: white;
+  padding: 5px 10px;
+}
+header .header-navbar .navbar-container a:hover {
+  border: 2px solid black;
+  border-radius: 8px;
+  color: black;
+  font-size: 30px;
+  background-color: white;
+  padding: 5px 10px;
 }/*# sourceMappingURL=style.css.map */
