--- a/scss/style.scss
+++ b/scss/style.scss
@@ -57,3 +57,41 @@ header {
         }
     }
 }
+main{
+    .banner{
+        margin: 0px 30px;
+        margin-top: 50px;
+        margin-bottom: 50px;
+        
+        .banner-container{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-wrap: wrap;
+           
+           
+            .banner-left-1{
+                margin-right: 30px;
+            }
+
+        }
+        .banner-right{
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            grid-gap:20px 20px;
+            .banner-2{
+                
+            }
+            .banner-3{
+
+            }
+            .banner-4{
+
+            }
+            .banner-5{
+
+            }
+
+        }  
+    }
+}
