--- a/scss/style.scss
+++ b/scss/style.scss
@@ -32,9 +32,10 @@ header {
                 border-radius: 8px;
                 padding: 5px 10px;
 
-                
+
 
             }
+
             .home {
                 border: 2px solid black;
                 border-radius: 8px;
@@ -57,41 +58,178 @@ header {
         }
     }
 }
-main{
-    .banner{
-        margin: 0px 30px;
-        margin-top: 50px;
-        margin-bottom: 50px;
-        
-        .banner-container{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-wrap: wrap;
-           
-           
-            .banner-left-1{
-                margin-right: 30px;
-            }
 
-        }
-        .banner-right{
+main {
+    .banner {
+        .banner-container {
+            width: 100%;
             display: grid;
             grid-template-columns: 1fr 1fr;
-            grid-gap:20px 20px;
-            .banner-2{
-                
-            }
-            .banner-3{
+
+            .banner-left-1 {
+                background-image: url("../images/left-banner-image.jpg");
+                background-size: contain;
+                background-repeat: no-repeat;
+                height: 650px;
+                margin: 50px;
+                justify-content: center;
+                display: flex;
+                align-items: center;
+                flex-direction: column;
+
+                .h1 {
+                    font-size: 80px;
+                    color: white;
+                    font-weight: 900;
+                    margin-bottom: 30px;
+                }
+
+                .p {
+                    font-size: 20px;
+                    font-weight: 500;
+                    font-style: italic;
+                    color: white;
+                    margin-bottom: 20px;
+                }
+
+                .btn {
+                    color: white;
+                    border: 1px solid transparent;
+                    border-radius: 10px;
+                    background-color: grey;
+                    padding: 15px 20px;
+
+                }
 
             }
-            .banner-4{
+
+            .banner-right {
+                display: grid;
+                grid-template-columns: 1fr 1fr;
+                grid-gap: 10px;
+                margin: 50px;
+
+                .banner-right-1 {
+                    background-image: url("../images/baner-right-image-01.jpg");
+                    background-size: contain;
+                    background-repeat: no-repeat;
+                    height: 300px;
+                    justify-content: center;
+                    display: flex;
+                    align-items: center;
+                    flex-direction: column;
+
+                    .h1 {
+                        font-size: 40px;
+                        color: white;
+                        font-weight: 900;
+                        margin-bottom: 30px;
+                    }
+
+                    .p {
+                        font-size: 20px;
+                        font-weight: 500;
+                        font-style: italic;
+                        color: white;
+                        margin-bottom: 20px;
+                    }
+
+                }
+
+                .banner-right-2 {
+                    background-image: url("../images/baner-right-image-02.jpg");
+                    background-size: contain;
+                    background-repeat: no-repeat;
+                    height: 300px;
+                    justify-content: center;
+                    display: flex;
+                    align-items: center;
+                    flex-direction: column;
+
+                    .h1 {
+                        font-size: 40px;
+                        color: white;
+                        font-weight: 900;
+                        margin-bottom: 30px;
+                    }
+
+                    .p {
+                        font-size: 20px;
+                        font-weight: 500;
+                        font-style: italic;
+                        color: white;
+                        margin-bottom: 20px;
+                    }
+
+
+                }
+
+                .banner-right-3 {
+                    background-image: url("../images/baner-right-image-03.jpg");
+                    background-size: contain;
+                    background-repeat: no-repeat;
+                    height: 300px;
+                    justify-content: center;
+                    display: flex;
+                    align-items: center;
+                    flex-direction: column;
+
+                    .h1 {
+                        font-size: 40px;
+                        color: white;
+                        font-weight: 900;
+                        margin-bottom: 30px;
+                    }
+
+                    .p {
+                        font-size: 20px;
+                        font-weight: 500;
+                        font-style: italic;
+                        color: white;
+                        margin-bottom: 20px;
+                    }
+
+                }
+
+                .banner-right-4 {
+                    background-image: url("../images/baner-right-image-04.jpg");
+                    background-size: contain;
+                    background-repeat: no-repeat;
+                    height: 300px;
+                    justify-content: center;
+                    display: flex;
+                    align-items: center;
+                    flex-direction: column;
+
+                    .h1 {
+                        font-size: 40px;
+                        color: white;
+                        font-weight: 900;
+                        margin-bottom: 30px;
+                    }
+
+                    .p {
+                        font-size: 20px;
+                        font-weight: 500;
+                        font-style: italic;
+                        color: white;
+                        margin-bottom: 20px;
+                    }
+
+                }
+
 
             }
-            .banner-5{
+        }
 
-            }
+    }
 
-        }  
+    .hr {
+        margin-top: 10px;
+        margin-bottom: 50px;
+
+        hr {
+            border: 1px dotted black;
+        }
     }
 }
