--- a/scss/style.scss
+++ b/scss/style.scss
@@ -60,6 +60,8 @@ header {
 }
 
 main {
+   
+    
     .banner {
         .banner-container {
             width: 100%;
@@ -102,7 +104,8 @@ main {
                 }
 
             }
-
+           
+                
             .banner-right {
                 display: grid;
                 grid-template-columns: 1fr 1fr;
@@ -119,19 +122,95 @@ main {
                     align-items: center;
                     flex-direction: column;
 
-                    .h1 {
-                        font-size: 40px;
-                        color: white;
-                        font-weight: 900;
-                        margin-bottom: 30px;
+                    .banner-right-1-content-1 {
+                        display: block;
+
+                        .h1 {
+                            font-size: 40px;
+                            color: white;
+                            font-weight: 900;
+                            margin-bottom: 30px;
+                        }
+
+                        .p {
+                            font-size: 20px;
+                            font-weight: 500;
+                            font-style: italic;
+                            color: white;
+                            margin-bottom: 20px;
+                        }
                     }
 
-                    .p {
-                        font-size: 20px;
-                        font-weight: 500;
-                        font-style: italic;
-                        color: white;
-                        margin-bottom: 20px;
+                    .banner-right-1-content-2 {
+                        display: none;
+
+                        .h1 {
+                            font-size: 40px;
+                            color: white;
+                            font-weight: 900;
+                            margin-bottom: 30px;
+                        }
+
+                        .btn {
+                            color: white;
+                            border: 1px solid transparent;
+                            border-radius: 10px;
+                            background-color: grey;
+                            padding: 15px 20px;
+                        }
+                    }
+
+
+                }
+
+                .banner-right-1:hover {
+                    
+                   
+                    .banner-right-1-content-1 {
+                        display: none;
+                        
+
+                        .h1 {
+                            font-size: 40px;
+                            color: white;
+                            font-weight: 900;
+                            margin-bottom: 30px;
+                        }
+
+                        .p {
+                            font-size: 20px;
+                            font-weight: 500;
+                            font-style: italic;
+                            color: white;
+                            margin-bottom: 20px;
+                        }
+                    }
+
+                    .banner-right-1-content-2 {
+                        display: block;
+                        background-color: black;
+                        padding: 50px 60px;
+                        .h1 {
+                            font-size: 40px;
+                            color: white;
+                            font-weight: 900;
+                            margin-bottom: 30px;
+                        }
+
+                        .btn {
+                            color: white;
+                            border: 1px solid white;
+                            border-radius: 10px;
+                            background-color: grey;
+                            padding: 15px 20px;
+                        }
+                        .btn:hover{
+                            color: black;
+                            border: 1px solid transparent;
+                            border-radius: 10px;
+                            background-color:white;
+                            padding: 15px 20px;
+                        }
                     }
 
                 }
@@ -145,22 +224,94 @@ main {
                     display: flex;
                     align-items: center;
                     flex-direction: column;
+                    .banner-right-2-content-1{
+                        display: block;
+                        
+                        .h1{
+                            font-size: 40px;
+                            color: white;
+                            font-weight: 900;
+                            margin-bottom: 30px;
+                        }
+                        .p{
+                            font-size: 20px;
+                            font-weight: 500;
+                            font-style: italic;
+                            color: white;
+                            margin-bottom: 20px;
+                        }
 
-                    .h1 {
-                        font-size: 40px;
-                        color: white;
-                        font-weight: 900;
-                        margin-bottom: 30px;
+                    }
+                    .banner-right-2-content-2{
+                        display: none;
+                        .h1{
+                            font-size: 40px;
+                            color: white;
+                            font-weight: 900;
+                            margin-bottom: 30px;
+                        }
+                        .p{
+                            font-size: 20px;
+                            font-weight: 500;
+                            font-style: italic;
+                            color: white;
+                            margin-bottom: 20px;
+                        }
+                    }
+                    
+                    
+                    
+                }
+                .banner-right-2:hover{
+                    
+                   
+                    .banner-right-2-content-1 {
+                        background-color: black;
+                        visibility: hidden;
+                        
+
+                        .h1 {
+                            font-size: 40px;
+                            color: white;
+                            font-weight: 900;
+                            margin-bottom: 30px;
+                        }
+
+                        .p {
+                            font-size: 20px;
+                            font-weight: 500;
+                            font-style: italic;
+                            color: white;
+                            margin-bottom: 20px;
+                        }
                     }
 
-                    .p {
-                        font-size: 20px;
-                        font-weight: 500;
-                        font-style: italic;
-                        color: white;
-                        margin-bottom: 20px;
-                    }
+                    .banner-right-2-content-2 {
+                        display: block;
+                        background-color: black;
+                        padding: 50px 60px;
+                        .h1 {
+                            font-size: 40px;
+                            color: white;
+                            font-weight: 900;
+                            margin-bottom: 30px;
+                        }
 
+                        .btn {
+                            color: white;
+                            border: 1px solid white;
+                            border-radius: 10px;
+                            background-color: grey;
+                            padding: 15px 20px;
+                        }
+                        .btn:hover{
+                            color: black;
+                            border: 1px solid transparent;
+                            border-radius: 10px;
+                            background-color:white;
+                            padding: 15px 20px;
+                        }
+                    }
 
                 }
 
@@ -174,19 +325,93 @@ main {
                     align-items: center;
                     flex-direction: column;
 
-                    .h1 {
-                        font-size: 40px;
-                        color: white;
-                        font-weight: 900;
-                        margin-bottom: 30px;
+                    .banner-right-3-content-1 {
+                        display: block;
+
+                        .h1 {
+                            font-size: 40px;
+                            color: white;
+                            font-weight: 900;
+                            margin-bottom: 30px;
+                        }
+
+                        .p {
+                            font-size: 20px;
+                            font-weight: 500;
+                            font-style: italic;
+                            color: white;
+                            margin-bottom: 20px;
+                        }
                     }
 
-                    .p {
-                        font-size: 20px;
-                        font-weight: 500;
-                        font-style: italic;
-                        color: white;
-                        margin-bottom: 20px;
+                    .banner-right-3-content-2 {
+                        display: none;
+
+                        .h1 {
+                            font-size: 40px;
+                            color: white;
+                            font-weight: 900;
+                            margin-bottom: 30px;
+                        }
+
+                        .btn {
+                            color: white;
+                            border: 1px solid transparent;
+                            border-radius: 10px;
+                            background-color: grey;
+                            padding: 15px 20px;
+                        }
+                    }
+
+                }
+                .banner-right-3:hover {
+                    
+                   
+                    .banner-right-3-content-1 {
+                        display: none;
+                        
+
+                        .h1 {
+                            font-size: 40px;
+                            color: white;
+                            font-weight: 900;
+                            margin-bottom: 30px;
+                        }
+
+                        .p {
+                            font-size: 20px;
+                            font-weight: 500;
+                            font-style: italic;
+                            color: white;
+                            margin-bottom: 20px;
+                        }
+                    }
+
+                    .banner-right-3-content-2 {
+                        display: block;
+                        background-color: black;
+                        padding: 50px 60px;
+                        .h1 {
+                            font-size: 40px;
+                            color: white;
+                            font-weight: 900;
+                            margin-bottom: 30px;
+                        }
+
+                        .btn {
+                            color: white;
+                            border: 1px solid white;
+                            border-radius: 10px;
+                            background-color: grey;
+                            padding: 15px 20px;
+                        }
+                        .btn:hover{
+                            color: black;
+                            border: 1px solid transparent;
+                            border-radius: 10px;
+                            background-color:white;
+                            padding: 15px 20px;
+                        }
                     }
 
                 }
@@ -201,19 +426,93 @@ main {
                     align-items: center;
                     flex-direction: column;
 
-                    .h1 {
-                        font-size: 40px;
-                        color: white;
-                        font-weight: 900;
-                        margin-bottom: 30px;
+                    
+                    .banner-right-4-content-1 {
+                        display: block;
+
+                        .h1 {
+                            font-size: 40px;
+                            color: white;
+                            font-weight: 900;
+                            margin-bottom: 30px;
+                        }
+
+                        .p {
+                            font-size: 20px;
+                            font-weight: 500;
+                            font-style: italic;
+                            color: white;
+                            margin-bottom: 20px;
+                        }
                     }
 
-                    .p {
-                        font-size: 20px;
-                        font-weight: 500;
-                        font-style: italic;
-                        color: white;
-                        margin-bottom: 20px;
+                    .banner-right-4-content-2 {
+                        display: none;
+
+                        .h1 {
+                            font-size: 40px;
+                            color: white;
+                            font-weight: 900;
+                            margin-bottom: 30px;
+                        }
+
+                        .btn {
+                            color: white;
+                            border: 1px solid transparent;
+                            border-radius: 10px;
+                            background-color: grey;
+                            padding: 15px 20px;
+                        }
+                    }
+                }
+                .banner-right-4:hover {
+                    
+                   
+                    .banner-right-4-content-1 {
+                        display: none;
+                        
+
+                        .h1 {
+                            font-size: 40px;
+                            color: white;
+                            font-weight: 900;
+                            margin-bottom: 30px;
+                        }
+
+                        .p {
+                            font-size: 20px;
+                            font-weight: 500;
+                            font-style: italic;
+                            color: white;
+                            margin-bottom: 20px;
+                        }
+                    }
+
+                    .banner-right-4-content-2 {
+                        display: block;
+                        background-color: black;
+                        padding: 50px 50px;
+                        .h1 {
+                            font-size: 40px;
+                            color: white;
+                            font-weight: 900;
+                            margin-bottom: 30px;
+                        }
+
+                        .btn {
+                            color: white;
+                            border: 1px solid white;
+                            border-radius: 10px;
+                            background-color: grey;
+                            padding: 15px 20px;
+                        }
+                        .btn:hover{
+                            color: black;
+                            border: 1px solid transparent;
+                            border-radius: 10px;
+                            background-color:white;
+                            padding: 15px 20px;
+                        }
                     }
 
                 }
