--- a/scss/style.css
+++ b/scss/style.css
@@ -425,4 +425,21 @@ main .hr {
 }
 main .hr hr {
   border: 1px dotted black;
+}
+
+.about-men {
+  margin-top: 150px;
+  margin-left: 100px;
+  margin-bottom: 80px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+.about-men .title {
+  font-size: 50px;
+  font-weight: 900;
+  color: black;
+}
+.about-men .info {
+  font-size: 30px;
+  color: black;
+  width: 50%;
 }/*# sourceMappingURL=style.css.map */
