--- a/scss/style.scss
+++ b/scss/style.scss
@@ -532,3 +532,19 @@ main {
         }
     }
 }
+.about-men{
+    margin-top: 150px;
+    margin-left: 100px;
+    margin-bottom: 80px;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    .title{
+        font-size: 50px;
+        font-weight: 900;
+        color:black;
+    }
+    .info{
+        font-size: 30px;
+        color: black;
+        width: 50%;
+    }
+}
