--- a/scss/style.scss
+++ b/scss/style.scss
@@ -60,8 +60,8 @@ header {
 }
 
 main {
-   
-    
+
+
     .banner {
         .banner-container {
             width: 100%;
@@ -104,8 +104,8 @@ main {
                 }
 
             }
-           
-                
+
+
             .banner-right {
                 display: grid;
                 grid-template-columns: 1fr 1fr;
@@ -164,11 +164,11 @@ main {
                 }
 
                 .banner-right-1:hover {
-                    
-                   
+
+
                     .banner-right-1-content-1 {
                         display: none;
-                        
+
 
                         .h1 {
                             font-size: 40px;
@@ -190,6 +190,7 @@ main {
                         display: block;
                         background-color: black;
                         padding: 50px 60px;
+
                         .h1 {
                             font-size: 40px;
                             color: white;
@@ -204,11 +205,12 @@ main {
                             background-color: grey;
                             padding: 15px 20px;
                         }
-                        .btn:hover{
+
+                        .btn:hover {
                             color: black;
                             border: 1px solid transparent;
                             border-radius: 10px;
-                            background-color:white;
+                            background-color: white;
                             padding: 15px 20px;
                         }
                     }
@@ -224,16 +226,18 @@ main {
                     display: flex;
                     align-items: center;
                     flex-direction: column;
-                    .banner-right-2-content-1{
+
+                    .banner-right-2-content-1 {
                         display: block;
-                        
-                        .h1{
+
+                        .h1 {
                             font-size: 40px;
                             color: white;
                             font-weight: 900;
                             margin-bottom: 30px;
                         }
-                        .p{
+
+                        .p {
                             font-size: 20px;
                             font-weight: 500;
                             font-style: italic;
@@ -242,15 +246,18 @@ main {
                         }
 
                     }
-                    .banner-right-2-content-2{
+
+                    .banner-right-2-content-2 {
                         display: none;
-                        .h1{
+
+                        .h1 {
                             font-size: 40px;
                             color: white;
                             font-weight: 900;
                             margin-bottom: 30px;
                         }
-                        .p{
+
+                        .p {
                             font-size: 20px;
                             font-weight: 500;
                             font-style: italic;
@@ -258,17 +265,18 @@ main {
                             margin-bottom: 20px;
                         }
                     }
-                    
-                    
-                    
+
+
+
                 }
-                .banner-right-2:hover{
-                    
-                   
+
+                .banner-right-2:hover {
+
+
                     .banner-right-2-content-1 {
                         background-color: black;
                         visibility: hidden;
-                        
+
 
                         .h1 {
                             font-size: 40px;
@@ -290,6 +298,7 @@ main {
                         display: block;
                         background-color: black;
                         padding: 50px 60px;
+
                         .h1 {
                             font-size: 40px;
                             color: white;
@@ -304,11 +313,12 @@ main {
                             background-color: grey;
                             padding: 15px 20px;
                         }
-                        .btn:hover{
+
+                        .btn:hover {
                             color: black;
                             border: 1px solid transparent;
                             border-radius: 10px;
-                            background-color:white;
+                            background-color: white;
                             padding: 15px 20px;
                         }
                     }
@@ -364,12 +374,13 @@ main {
                     }
 
                 }
+
                 .banner-right-3:hover {
-                    
-                   
+
+
                     .banner-right-3-content-1 {
                         display: none;
-                        
+
 
                         .h1 {
                             font-size: 40px;
@@ -391,6 +402,7 @@ main {
                         display: block;
                         background-color: black;
                         padding: 50px 60px;
+
                         .h1 {
                             font-size: 40px;
                             color: white;
@@ -405,11 +417,12 @@ main {
                             background-color: grey;
                             padding: 15px 20px;
                         }
-                        .btn:hover{
+
+                        .btn:hover {
                             color: black;
                             border: 1px solid transparent;
                             border-radius: 10px;
-                            background-color:white;
+                            background-color: white;
                             padding: 15px 20px;
                         }
                     }
@@ -426,7 +439,7 @@ main {
                     align-items: center;
                     flex-direction: column;
 
-                    
+
                     .banner-right-4-content-1 {
                         display: block;
 
@@ -465,12 +478,13 @@ main {
                         }
                     }
                 }
+
                 .banner-right-4:hover {
-                    
-                   
+
+
                     .banner-right-4-content-1 {
                         display: none;
-                        
+
 
                         .h1 {
                             font-size: 40px;
@@ -492,6 +506,7 @@ main {
                         display: block;
                         background-color: black;
                         padding: 50px 50px;
+
                         .h1 {
                             font-size: 40px;
                             color: white;
@@ -506,11 +521,12 @@ main {
                             background-color: grey;
                             padding: 15px 20px;
                         }
-                        .btn:hover{
+
+                        .btn:hover {
                             color: black;
                             border: 1px solid transparent;
                             border-radius: 10px;
-                            background-color:white;
+                            background-color: white;
                             padding: 15px 20px;
                         }
                     }
@@ -532,19 +548,120 @@ main {
         }
     }
 }
-.about-men{
+
+.about-men {
     margin-top: 150px;
     margin-left: 100px;
     margin-bottom: 80px;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    .title{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+    .title {
         font-size: 50px;
         font-weight: 900;
-        color:black;
+        color: black;
     }
-    .info{
+
+    .info {
         font-size: 30px;
         color: black;
         width: 50%;
+    }
+}
+
+.mens-photo {
+    display: grid;
+    grid-template-columns: .2fr 1fr 1fr 1fr .2fr;
+    margin-bottom: 70px;
+    margin-left: 30px;
+
+    .pre {
+        width: 100px;
+        padding-top: 180px;
+        margin-right: 80px;
+
+        float: left;
+    }
+
+    .mens-photo-1 {
+        .about-mens-photo-1 {
+            display: flex;
+            align-items: center;
+
+            .title {
+                font-size: 30px;
+
+            }
+
+            img {
+                width: 100px;
+                margin-left: 90px;
+            }
+
+        }
+
+        .price {
+            font-size: 20px;
+        }
+    }
+
+    .mens-photo-2 {
+        .about-mens-photo-1 {
+            display: flex;
+            align-items: center;
+
+            .title {
+                font-size: 30px;
+
+            }
+
+            img {
+                width: 100px;
+                margin-left: 90px;
+            }
+
+        }
+
+        .price {
+            font-size: 20px;
+        }
+    }
+
+    .mens-photo-3 {
+        .about-mens-photo-1 {
+            display: flex;
+            align-items: center;
+
+            .title {
+                font-size: 30px;
+
+            }
+
+            img {
+                width: 100px;
+                margin-left: 87px;
+            }
+
+        }
+
+        .price {
+            font-size: 20px;
+        }
+    }
+
+    .next {
+        width: 100px;
+        padding-top: 180px;
+        padding-left: 0px;
+    }
+
+
+}
+
+.real {
+    margin-top: 10px;
+    margin-bottom: 50px;
+
+    hr {
+        border: 5px dotted black;
     }
 }
