--- a/scss/style.scss
+++ b/scss/style.scss
@@ -662,6 +662,24 @@ main {
     margin-bottom: 50px;
 
     hr {
-        border: 5px dotted black;
+        border: 1px dotted black;
+    }
+}
+.about-women {
+    margin-top: 150px;
+    margin-left: 100px;
+    margin-bottom: 80px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+    .title {
+        font-size: 50px;
+        font-weight: 900;
+        color: black;
+    }
+
+    .info {
+        font-size: 30px;
+        color: black;
+        width: 50%;
     }
 }
