--- a/scss/style.css
+++ b/scss/style.css
@@ -527,4 +527,64 @@ main .hr hr {
   font-size: 30px;
   color: black;
   width: 50%;
+}
+
+.womens-photo {
+  display: grid;
+  grid-template-columns: 0.2fr 1fr 1fr 1fr 0.2fr;
+  margin-bottom: 70px;
+  margin-left: 30px;
+}
+.womens-photo .pre {
+  width: 100px;
+  padding-top: 180px;
+  margin-right: 80px;
+  float: left;
+}
+.womens-photo .womens-photo-1 .about-womens-photo-1 {
+  display: flex;
+  align-items: center;
+}
+.womens-photo .womens-photo-1 .about-womens-photo-1 .title {
+  font-size: 30px;
+}
+.womens-photo .womens-photo-1 .about-womens-photo-1 img {
+  width: 100px;
+  margin-left: 90px;
+}
+.womens-photo .womens-photo-1 .price {
+  font-size: 20px;
+}
+.womens-photo .womens-photo-2 .about-womens-photo-1 {
+  display: flex;
+  align-items: center;
+}
+.womens-photo .womens-photo-2 .about-womens-photo-1 .title {
+  font-size: 30px;
+}
+.womens-photo .womens-photo-2 .about-womens-photo-1 img {
+  width: 100px;
+  margin-left: 90px;
+}
+.womens-photo .womens-photo-2 .price {
+  font-size: 20px;
+}
+.womens-photo .womens-photo-3 .about-womens-photo-1 {
+  display: flex;
+  align-items: center;
+}
+.womens-photo .womens-photo-3 .about-womens-photo-1 .title {
+  font-size: 30px;
+}
+.womens-photo .womens-photo-3 .about-womens-photo-1 img {
+  width: 100px;
+  margin-left: 87px;
+}
+.womens-photo .womens-photo-3 .price {
+  font-size: 20px;
+}
+.womens-photo .next {
+  width: 100px;
+  padding-top: 180px;
+  padding-left: 0px;
 }/*# sourceMappingURL=style.css.map */
