--- a/scss/style.scss
+++ b/scss/style.scss
@@ -102,6 +102,13 @@ main {
                     padding: 15px 20px;
 
                 }
+                .btn:hover{
+                    color: black;
+                    border: 1px solid black;
+                    border-radius: 10px;
+                    background-color: white;
+                    padding: 15px 20px; 
+                }
 
             }
 
