button of container section is now update

--- a/scss/style.css
+++ b/scss/style.css
@@ -719,7 +719,16 @@ main .hr hr {
   border: 2px solid black;
   color: black;
   background-color: white;
-  border-radius: 5px;
+  border-radius: 8px;
+}
+.container .about-container .btn:hover {
+  margin-left: 175px;
+  padding: 20px;
+  font-size: 25px;
+  border: 2px solid white;
+  color: white;
+  background-color: black;
+  border-radius: 8px;
 }
 .container .image-container {
   display: grid;
